# _browser

./: .gitignore  Cargo.toml  DECISIONS.md  PHASE5_PLAN.md  PHASE_6_COMPLETE.md  README.md
examples/: demo.html  network_demo.rs  run_benchmarks.rs
src/: animation.rs  benchmarks.rs  canvas.rs  compositor.rs  devtools.rs  fetch.rs  forms.rs  indexeddb.rs  lib.rs  main.rs  multiprocess.rs  navigation.rs  observers.rs  performance.rs  storage.rs  websocket.rs
src/css/: mod.rs
src/display/: mod.rs
src/dom/: mod.rs
src/html/: mod.rs
src/js/: dom_bindings.rs  event_handler.rs  mod.rs  runtime.rs
src/layout/: flexbox.rs  flexbox_tests.rs  grid.rs  mod.rs  positioning.rs
src/net/: mod.rs  page_loader.rs  resource_loader.rs
src/renderer/: border_painter.rs  font_manager.rs  glyph_cache.rs  image_cache.rs  image_painter.rs  mod.rs  painter.rs  text_painter.rs  text_renderer.rs
src/renderer/fonts/: README.md
src/renderer/shaders/: image.wgsl  rect.wgsl  text.wgsl
src/style/: mod.rs
src/ui/: address_bar.rs  input_handler.rs  mod.rs  navigation.rs
src/window/: mod.rs  scroll.rs
