[package]
name = "browser_engine"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]

[lib]
name = "browser_engine"
path = "src/lib.rs"

[dependencies]
# Phase 1: Parsing and layout
html5ever = "0.27"
markup5ever = "0.12"
cssparser = "0.31"
selectors = "0.25"
string_cache = "0.8"

# Phase 2: Rendering
winit = "0.29"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }

# Phase 4: Content rendering (fonts and images)
fontdue = "0.8"
font-kit = "0.13"
unicode-normalization = "0.1"
image = { version = "0.24", features = ["png", "jpeg", "gif", "webp"] }

# Phase 3: Networking
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.5"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }

# Phase 6: JavaScript engine
boa_engine = "0.17"
